--- a/index.html
+++ b/index.html
@@ -1,84 +1,19 @@
 <!DOCTYPE html>
-<html lang="kr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Archive Callmeby</title>
-</head>
-    <div class="header-bar">
-        <div class="header-bar__column">
-            <i class="fas fa-bars"></i>
-        </div>
-
-        <div class="header-bar__column">
-            <span>archive callmeby</span>
-        </div>
-
-        <div class="header-bar__column">
-            <i class="fas fa-search-dollar"></i>
-        </div>
-    </div>
-
-    <section class="posts">
-        <div class="posts__header">
-            <div class="content-bar__column">
-                <span>전체 글(63)</span>   
-            </div>
-            <div class="content-bar__column">
-                <i class="fas fa-th-large"></i>
-                <i class="fas fa-bars"></i>
-            </div>
-        </div>
-
-        <div class="posts__items">
-            <div class="post__items__column">
-                <a href="/63">
-                    <span class="post__items__column thumbnail"><img src=""></span>
-                    <span class="post__items__column title">63.</span>
-                    <span class="post__items__column excert"></span>
-                </a>
-            </div>
-
-            <div class="post__items__column">
-                <a href="/62">
-                    <span class="post__items__column thumbnail"><img src=""></span>
-                    <span class="post__items__column title">62.</span>
-                    <span class="post__items__column excert"></span>
-                </a>
-            </div>
-
-            <div class="post__items__column">
-                <a href="/61">
-                    <span class="post__items__column thumbnail"><img src=""></span>
-                    <span class="post__items__column title">61.</span>
-                    <span class="post__items__column excert"></span>
-                </a>
-            </div>
-
-            <div class="post__items__column">
-                <a href="/60">
-                    <span class="post__items__column thumbnail"><img src=""></span>
-                    <span class="post__items__column title">60.</span>
-                    <span class="post__items__column excert"></span>
-                </a>
-            </div>
-            
-        </div>
-
-        <div class="posts__pagenation">
-            <button class="post__pagenation__morebtn" type="button" >목록 더보기</button>
-        </div>
-    </div>
-
-
-
-    <script 
-    src="https://kit.fontawesome.com/6478f529f2.js"
-    crossorigin="anonymous">
-    </script>
-<body>
-
-</body>
-
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Documentary - Everyone has a story</title>
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
+  <body>
+    <h1>My Documentary</h1>
+    <h4>Everyone has a story</h4>
+    <form id="login-form" class="hidden" action="test.html">
+      <label for="account-name">What is your secret code?</label>
+      <input id="account-name" placeholder="#djus13dk" />
+      <button>Find My Story</button>
+    </form>
+  </body>
 </html>
