My Documentary Demo
Demo

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<html>
-    <head>
-        
-    </head>
-
-    <body>
-        <header>
-
-        </header>
-        
-        <h1>this is the first test!</h1>
-
-        <footer>
-
-        </footer>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Documentary - Everyone has a story</title>
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
+  <body>
+    <h1>My Documentary</h1>
+    <h4>Everyone has a story</h4>
+    <form id="login-form" class="hidden" action="test.html">
+      <label for="account-name">What is your secret code?</label>
+      <input id="account-name" placeholder="#djus13dk" />
+      <button>Find My Story</button>
+    </form>
+  </body>
 </html>
